test/expected/declare_o_oexclam_k_b.out
declare ! as overridden operator (S) returning bool
                                  ^
35: error: member operator "!" must have exactly 0 parameters
